Set up code analyzers

--- a/Conglomo.Confessions.Indexer.csproj
+++ b/Conglomo.Confessions.Indexer.csproj
@@ -13,6 +13,7 @@
     <Nullable>enable</Nullable>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <NeutralLanguage>en-NZ</NeutralLanguage>
+    <AnalysisLevel>latest</AnalysisLevel>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
